Fixed page content link bleeding with card objects

--- a/assets/scss/base/_links.scss
+++ b/assets/scss/base/_links.scss
@@ -54,7 +54,7 @@ tbody tr a {
 .page-content a,
 .post-content a {
 
-    &:not(.button):not(.post-object) {
+    &:not(.button):not(.card a) {
 
         color: inherit;
         text-decoration: none;
